--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "rewrites": [
     { "source": "/home", "destination": "/index.html" },
-    { "source": "/terms-of-service", "destination": "/tos.html" },
-    { "source": "/terms", "destination": "/tos.html" },
-    { "source": "/tos", "destination": "/tos.html" },
+    { "source": "/about", "destination": "/about.html" },
+    { "source": "/about-the-protocol", "destination": "/about.html" },
+    { "source": "/what-is-liquid-staking", "destination": "/what-is-liquid-staking.html" },
+    { "source": "/what-can-i-earn", "destination": "/what-can-i-earn.html" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
